force-app/main/default/objects/PortalFieldCfg__c/PortalFieldCfg__c.object-meta.xml
<CustomObject>
    <description>Field Configuration for the portal</description>
    <label>PortalFieldCfg</label>
    <nameField>
        <displayFormat>PFC{00000}</displayFormat>
        <label>PortalFieldCfg Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PortalFieldCfg</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>