force-app/main/default/objects/PortalFieldCfg__c/fields/ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationType__c</fullName>
    <label>ApplicationType</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Premise Update</fullName>
            </value>
            <value>
                <fullName>Office Update</fullName>
            </value>
            <value>
                <fullName>Add Privileges</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Dram Shop Change</fullName>
            </value>
            <value>
                <fullName>Additional Locations</fullName>
            </value>
            <value>
                <fullName>Label Approval</fullName>
            </value>
            <value>
                <fullName>Keg Registration Stickers</fullName>
            </value>
            <value>
                <fullName>Transfer License</fullName>
            </value>
            <value>
                <fullName>Tax Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>