force-app/main/default/objects/PortalFieldCfg__c/fields/Conditional_Validation_Field__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Validation_Field__c</fullName>
    <inlineHelpText>adds to the validation where clause, if populated and the condition is false, this field will be omitted from validation.</inlineHelpText>
    <label>Conditional Validation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>