force-app/main/default/objects/PortalFieldCfg__c/fields/Conditional_Validation_Value__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Validation_Value__c</fullName>
    <label>Conditional Validation Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>