force-app/main/default/objects/PortalFieldCfg__c/fields/ContentName__c.field-meta.xml
<CustomField>
    <fullName>ContentName__c</fullName>
    <description>Content Areas - These need to match the button sections that are defined in the metadata.</description>
    <label>ContentName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Licensee</fullName>
            </value>
            <value>
                <fullName>Premise</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>AuthorizedAgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>