force-app/main/default/objects/PortalFieldCfg__c/fields/CSS_Class__c.field-meta.xml
<CustomField>
    <fullName>CSS_Class__c</fullName>
    <description>Additional Class definitions - Classes must already exist in the CSS for this to be effective</description>
    <label>CSS Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>