force-app/main/default/objects/PortalFieldCfg__c/fields/Dependent_Parent_Value__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Parent_Value__c</fullName>
    <description>This question will display when the parent's answer matches this value. This value here has a corresponding entry in code to support the answer.  Adding a value requires code changes.</description>
    <label>Dependent Parent Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>> 0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>