force-app/main/default/objects/PortalFieldCfg__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>The label to display on the screen</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>