force-app/main/default/objects/PortalFieldCfg__c/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>Field name in Object (api name)</description>
    <label>FieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>