force-app/main/default/objects/PortalFieldCfg__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Used in conjunction with column and order to create groups of fields.  Each group is effectively a table with columns and rows (order)</description>
    <label>Group</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>