force-app/main/default/objects/PortalFieldCfg__c/fields/IsReadOnly__c.field-meta.xml
<CustomField>
    <fullName>IsReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked if this field is read only for this license type and application type</description>
    <label>IsReadOnly</label>
    <type>Checkbox</type>
</CustomField>