force-app/main/default/objects/PortalFieldCfg__c/fields/isRequired__c.field-meta.xml
<CustomField>
    <fullName>isRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked if this field is rquired for this licensetype and application type</description>
    <label>isRequired</label>
    <type>Checkbox</type>
</CustomField>