force-app/main/default/objects/PortalFieldCfg__c/fields/LicenseTypeCode__c.field-meta.xml
<CustomField>
    <fullName>LicenseTypeCode__c</fullName>
    <label>LicenseTypeCode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BAA</fullName>
            </value>
            <value>
                <fullName>BAAN</fullName>
            </value>
            <value>
                <fullName>BAN</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>BW</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>LB</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>LD</fullName>
            </value>
            <value>
                <fullName>LE</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>WAN</fullName>
            </value>
            <value>
                <fullName>WB</fullName>
            </value>
            <value>
                <fullName>WBN</fullName>
            </value>
            <value>
                <fullName>WCN</fullName>
            </value>
            <value>
                <fullName>P-OS</fullName>
            </value>
            <value>
                <fullName>P-SS</fullName>
            </value>
            <value>
                <fullName>P-C</fullName>
            </value>
            <value>
                <fullName>P-BP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>