force-app/main/default/objects/PortalFieldCfg__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>API name of the object that holds the field</description>
    <label>ObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>