force-app/main/default/objects/PortalFieldCfg__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <label>PageName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewApplication</fullName>
            </value>
            <value>
                <fullName>Licensee</fullName>
            </value>
            <value>
                <fullName>Premise</fullName>
            </value>
            <value>
                <fullName>PremiseQuestions</fullName>
            </value>
            <value>
                <fullName>PremiseApplicationQuestions</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>OwnerList</fullName>
            </value>
            <value>
                <fullName>OwnerApplicationQuestions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>