force-app/main/default/objects/PortalFieldCfg__c/fields/ParentField__c.field-meta.xml
<CustomField>
    <fullName>ParentField__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to parent question</description>
    <label>ParentField</label>
    <referenceTo>PortalFieldCfg__c</referenceTo>
    <relationshipLabel>ChildrenFields</relationshipLabel>
    <relationshipName>ChildrenFields</relationshipName>
    <type>Lookup</type>
</CustomField>