force-app/main/default/objects/PortalFieldCfg__c/fields/Progress_Section__c.field-meta.xml
<CustomField>
    <fullName>Progress_Section__c</fullName>
    <label>Progress Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Premise</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
            <value>
                <fullName>Submit</fullName>
            </value>
            <value>
                <fullName>Fees &amp; Documentation</fullName>
            </value>
            <value>
                <fullName>Insurance Review</fullName>
            </value>
            <value>
                <fullName>Local Authority Review</fullName>
            </value>
            <value>
                <fullName>State Review</fullName>
            </value>
            <value>
                <fullName>Decision Rendered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>