force-app/main/default/objects/PortalFieldCfg__c/fields/TargetIsObject__c.field-meta.xml
<CustomField>
    <fullName>TargetIsObject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unsupported currently - If this box is checked, then instead of displaying a field, we display an object and populate the object.</description>
    <label>TargetIsObject</label>
    <type>Checkbox</type>
</CustomField>