force-app/main/default/objects/PortalFieldCfg__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ApplicationType__c</columns>
    <columns>Column__c</columns>
    <columns>ColumnOrder__c</columns>
    <columns>FieldName__c</columns>
    <columns>Group__c</columns>
    <columns>isRequired__c</columns>
    <columns>IsReadOnly__c</columns>
    <columns>Progress_Section__c</columns>
    <columns>ObjectName__c</columns>
    <columns>PageName__c</columns>
    <columns>LicenseTypeCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>